--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   webview_flutter: ^4.8.0
+  lottie: ^3.1.3
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +27,7 @@ flutter:
 
   assets:
     - assets/img/
+    - assets/videos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
